--- a/Supermercado/templates/clienteRegistrar.html
+++ b/Supermercado/templates/clienteRegistrar.html
@@ -34,7 +34,7 @@
     <!--formulario de registro-->
         <div class="container mt-5 col-7 align-center">
             <div class="container text-center text-success"><h2>REGISTRAR CLIENTE</h2></div>
-            <form action="../ListaCliente/" method="post">
+            <form action="../ListaClientes/" method="post">
                 {% csrf_token %}
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="usuario" name="usuario" required placeholder="Usuario">
