--- a/Supermercado/static/css/styleListaCompra.css
+++ b/Supermercado/static/css/styleListaCompra.css
@@ -57,39 +57,62 @@ body{
 
 .menu{
     grid-column: 1/4;
-    background-color:rgb(81, 146, 89);
+    
     padding:0px;
     margin-top: 0px;
 }
 
 .menuIND{
-    list-style:none;
-    box-decoration-break: none;
+    margin: 0;
+    width: 100%;
     display: flex;
-    padding: 0em;
-    margin-top: 1mm;
-    margin-bottom: 1mm;
+    flex-direction: row;
+    list-style: none;
+    padding: 1px 0;
+    border-radius: 25px;
+    border: 0.1px solid #00ff00;
+    background-color: rgb(81, 146, 89);
+    box-shadow: 0 4px 8px 0 #00ff00, 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .b1{
-    padding-top: 0.7em;
-    padding-bottom: 0.8em;
-    margin-right: 2em;
-    margin-top: 0px;
-    background-color:rgb(236, 224, 83);
-    border-radius: 0.5em;
-    padding-left: 2em;
-    padding-right: 2em;
+    width: 120px;
+    margin: 15px;
+    margin-left: 30px;
+    color: white;
+    font-size: 15px;
+    cursor: pointer;
+    text-align: center;
+    
+}
+
+.b1:after {
+    display: block;
+    content: '';
+    border-bottom: solid 3px #f1c40f;
+    padding-bottom: 1%;
+    transform: scaleX(0);
+    transition: transform 300ms ease-in-out;
+}
+
+.b1:hover:after {
+    transform: scaleX(1);
 }
 .b1 a{
     text-decoration: none;
     color: black;
 }
 .login{
-    float: right;
-    text-align: right;
+    margin-right: 40px;
+    text-align: center;
     margin-left: auto;
 }
+.nombre{
+    width: 15em;
+    margin-top: 1em;
+    justify-self: auto;
+    text-align: center;
 
+}
 
 .catalogoPRO{
     grid-column: 1/6;
@@ -199,4 +222,41 @@ input{
 }
 .elem6{
     width: 10%;
+}
+.nav{
+    list-style: none;
+    width: 130px;
+
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    background-color:rgb(6, 70, 53);
+    top: 25px;
+    left: -20px;
+    border-radius: 1em;
+   
+    z-index: -2;
+    
+}
+
+.me45:hover{
+    top: 11em;
+    left: 600px;
+    transform: scaleX(1);
+    opacity: 1;
+    z-index: 2;
+}
+
+.nav li:hover{
+    display: block;
+    content: '';
+    border-bottom: solid 3px #f1c40f;
+    
+    transform: scaleX(1);
+    
+}
+.nav li{
+    margin-left: -35px;
+    padding: 1em;
+    border-radius: 1em;
 }
