--- a/Supermercado/static/css/sttyleCatalogo.css
+++ b/Supermercado/static/css/sttyleCatalogo.css
@@ -106,11 +106,13 @@ body{
 }
 
 .nombre{
-    width: 15em;
+    width: 5em;
     margin-top: 1em;
     justify-self: auto;
-    text-align: center;
-
+    
+}
+.nombr{
+    width: 20em;
 }
 
 
@@ -252,4 +254,10 @@ body{
     margin-left: -35px;
     padding: 1em;
     border-radius: 1em;
+}
+
+.labelcua{
+    visibility:hidden;
+    display: none;
+    
 }
