--- a/Supermercado/templates/catalogo.html
+++ b/Supermercado/templates/catalogo.html
@@ -23,9 +23,16 @@
                     <li class="Inicio b1" ><a href="{% url 'index' %}">Inicio</a></li>
                     <li class="opcion2 b1" ><a href="{% url 'catalogo' %}">catalogo</a></li>
                     
+                    
                     {%if request.session.user and not request.session.superusu and not request.session.emple%}
                     <li class="nombre" id="usu" name="usu" width="2em" >Bienvenid@ {{request.session.user}} </li>
-                    <li class="canastal" ><a href="{% url 'listCompra' %}"><img class="canasta" src="{%static 'css/canasta.png'%}"></a></li>                    
+                    
+                    <li class="canastal" ><a href="{% url 'listCompra' request.session.user%}"><img class="canasta" src="{%static 'css/canasta.png'%}">
+                        
+                            
+
+                        
+                    </a></li>                    
                     <li class="opcion4 b1 login me45"><a>menu</a>
                         <ul class="nav">
                             <li><a class="" href="#">PERFIL</a></li>
@@ -37,8 +44,9 @@
                         
                     </li>
                     {%elif request.session.superusu%}
-                    <li class="nombre" id="usu" name="usu" width="2em" >Bienvenid@ {{request.session.user}} </li>
-                    <li class="canastal" ><a href="{% url 'listCompra' %}"><img class="canasta" src="{%static 'css/canasta.png'%}"></a></li>
+                    <li class="opcion2 b1" ><a href="{% url 'MenuAdmin' %}">Transacciones</a></li>
+                    <li class="nombre" id="usu" name="usu" ><div class="nombr">Bienvenid@ administrador {{request.session.user}}</div> </li>
+                    <li class="canastal" ><a href="{% url 'listCompra' request.session.user%}"><img class="canasta" src="{%static 'css/canasta.png'%}"></a></li>
                     <li class="opcion4 b1 login me45"><a>menu</a>
                         <ul class="nav">
                             <li><a class="" href="#">PERFIL</a></li>
@@ -50,8 +58,11 @@
                         
                     </li>
                     {%elif request.session.emple%}
-                    <li class="nombre" id="usu" name="usu" width="2em" >Bienvenid@ {{request.session.user}} </li>
-                    <li class="canastal" ><a href="{% url 'listCompra' %}"><img class="canasta" src="{%static 'css/canasta.png'%}"></a></li>
+                    <li class="opcion2 b1" ><a href="{% url 'MenuEmpleado' %}">Transacciones</a></li>
+                    <li class="nombre" id="usu" name="usu" ><div class="nombr">Bienvenid@ empleado {{request.session.user}}</div> </li>
+                    <li class="canastal" ><a href="{% url 'listCompra' request.session.user%}"><img class="canasta" src="{%static 'css/canasta.png'%}">
+                    
+                    </a></li>
                     <li class="opcion4 b1 login me45"><a>menu</a>
                         <ul class="nav">
                             <li><a class="" href="#">PERFIL</a></li>
@@ -112,7 +123,7 @@
                                     {% csrf_token %}
                                     
                                     <input type="hidden" value="{{pro.PRO_Code}}" name="PRO_Code">
-                                    <input type="label" value="{{request.session.user}}" name="PRO_user">
+                                    <input class="labelcua" type="label" value="{{request.session.user}}" name="userPri">
                                 <input class="b1" type="submit" value="comprar" name="comprarP">
                             </form>
                             </div>
