--- a/Supermercado/templates/clientesEMP.html
+++ b/Supermercado/templates/clientesEMP.html
@@ -31,7 +31,7 @@
             <div class="text1 me-3">Bienvenido usuario: User1</div>
             <a href="../"><button  class="btn rounded-pill btn-outline-warning" type="button">Inicio</button></a>
             <a href="../MenuEmpleado/"><button  class="btn rounded-pill btn-outline-warning" type="button">Menú</button></a>
-            <a href=""><button  class="btn rounded-pill btn-outline-warning" type="button">Cerrar sesión</button></a>
+            <a href="{% url 'cerrar' %}"><button  class="btn rounded-pill btn-outline-warning" type="button">Cerrar sesión</button></a>
         </div>
                 
 
