--- a/Supermercado/templates/index.html
+++ b/Supermercado/templates/index.html
@@ -25,7 +25,7 @@
                         
                         {%if request.session.user and not request.session.superusu and not request.session.emple%}
                         <li class="nombre" id="usu" name="usu" width="2em" >Bienvenid@ {{request.session.user}} </li>
-                        <li class="canastal" ><a href="{% url 'listCompra' %}"><img class="canasta" src="{%static 'css/canasta.png'%}"></a></li>                    
+                        <li class="canastal" ><a href="{% url 'listCompra' request.session.user%}"><img class="canasta" src="{%static 'css/canasta.png'%}"></a></li>                    
                         
                         
                         
@@ -44,8 +44,9 @@
 
 
                         {%elif request.session.superusu%}
-                        <li class="nombre" id="usu" name="usu" width="2em" >Bienvenid@ {{request.session.user}} </li>
-                        <li class="canastal" ><a href="{% url 'listCompra' %}"><img class="canasta" src="{%static 'css/canasta.png'%}"></a></li>
+                        <li class="opcion2 b1" ><a href="{% url 'MenuAdmin' %}">Transacciones</a></li>
+                        <li class="nombre" id="usu" name="usu" ><div class="nombr">Bienvenid@ administrador {{request.session.user}}</div> </li>
+                        <li class="canastal" ><a href="{% url 'listCompra' request.session.user%}"><img class="canasta" src="{%static 'css/canasta.png'%}"></a></li>
                         <li class="opcion4 b1 login me45"><a>menu</a>
                             <ul class="nav">
                                 <li><a class="" href="#">PERFIL</a></li>
@@ -57,8 +58,9 @@
                             
                         </li>
                         {%elif request.session.emple%}
-                        <li class="nombre" id="usu" name="usu" width="2em" >Bienvenid@ {{request.session.user}} </li>
-                        <li class="canastal" ><a href="{% url 'listCompra' %}"><img class="canasta" src="{%static 'css/canasta.png'%}"></a></li>
+                        <li class="opcion2 b1" ><a href="{% url 'MenuEmpleado' %}">Transacciones</a></li>
+                        <li class="nombre" id="usu" name="usu" ><div class="nombr">Bienvenid@ empleado {{request.session.user}}</div> </li>
+                        <li class="canastal" ><a href="{% url 'listCompra' request.session.user%}"><img class="canasta" src="{%static 'css/canasta.png'%}"></a></li>
                         <li class="opcion4 b1 login me45"><a>menu</a>
                             <ul class="nav">
                                 <li><a class="" href="#">PERFIL</a></li>
