--- a/Supermercado/templates/menuAdmin.html
+++ b/Supermercado/templates/menuAdmin.html
@@ -27,9 +27,9 @@
         </header>
 
         <div class="barraNav pe-3">
-            <div class="text1 me-3">Bienvenido usuario: User1</div>
-            <a href="../"><button  class="btn rounded-pill btn-outline-warning" type="button">Inicio</button></a>
-            <a href=""><button  class="btn rounded-pill btn-outline-warning" type="button">Cerrar sesión</button></a>
+            <div class="text1 me-3">Bienvenido usuario: {{request.session.user}}</div>
+            <a href="{% url 'index' %}"><button  class="btn rounded-pill btn-outline-warning" type="button">Inicio</button></a>
+            <a href="{% url 'cerrar' %}"><button  class="btn rounded-pill btn-outline-warning" type="button">Cerrar sesión</button></a>
         </div>
 
         <div class="container">
