--- a/Supermercado/templates/clienteEditar.html
+++ b/Supermercado/templates/clienteEditar.html
@@ -67,8 +67,8 @@
                     <label for="userAdmin" class="form-label">Usuario administrador</label>
                 </div>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-center mb-4">
-                    <a href="../ListaClientes/"><button class="btn btn-primary rounded-pill" type="button">Volver</button></a>
-                    <button class="btn btn-primary rounded-pill" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Actualizar</button>
+                    <a href="../ListaClientes/"><button class="btn btn-outline-primary rounded-pill" type="button">Volver</button></a>
+                    <button class="btn btn-outline-success rounded-pill" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Actualizar</button>
                 </div>
             
                         <!-- Modal  hace referencia a una ventana emergente para dar la opción de confirmar-->
