--- a/Supermercado/templates/clientesEMP.html
+++ b/Supermercado/templates/clientesEMP.html
@@ -45,11 +45,11 @@
                         <input class="form-control" type="text" name="usuario" required placeholder="Usuario">                  
                     </div>
                     <div class="col-auto">
-                        <button type="submit" class="btn rounded-pill btn-primary">Buscar</button>
+                        <button type="submit" class="btn rounded-pill btn-outline-primary">Buscar</button>
                     </div>
                 </form>
                 <a href="../ListaClientesEMP/">   
-                    <button class="btn rounded-pill btn-primary" type="button">Todos</button>
+                    <button class="btn rounded-pill btn-outline-primary" type="button">Todos</button>
                 </a>
             </div>
 
