--- a/Supermercado/templates/clientes.html
+++ b/Supermercado/templates/clientes.html
@@ -27,10 +27,10 @@
         </header>
 
         <div class="barraNav pe-3">
-            <div class="text1 me-3">Bienvenido usuario: User1</div>
+            <div class="text1 me-3">Bienvenido usuario: {{request.session.user}} </div>
             <a href="../"><button  class="btn rounded-pill btn-outline-warning" type="button">Inicio</button></a>
             <a href="../MenuAdmin/"><button  class="btn rounded-pill btn-outline-warning" type="button">Menú</button></a>
-            <a href=""><button  class="btn rounded-pill btn-outline-warning" type="button">Cerrar sesión</button></a>
+            <a href="{% url 'cerrar' %}"><button  class="btn rounded-pill btn-outline-warning" type="button">Cerrar sesión</button></a>
         </div>
                 
 
@@ -67,33 +67,35 @@
                 </div>
             {% endif%}  
 
-            <table class="table table-striped table-hover mt-2">
+            <table class="table table-bordered table-striped table-hover mt-2">
                 <thead>
-                    <th class="col-sm-1.5 ">USUARIO</th>
-                    <th class="col-sm-1.5">CONTRASEÑA</th>
-                    <th class="col-sm-2">NOMBRE</th>
-                    <th class="col-sm-2">APELLIDO</th>
-                    <th class="col-sm-2">EMAIL</th>
-                    <th class="col-sm-1.5">TELEFONO</th>
-                    <th class="col-sm-1.5">USER ADMIN</th>
-                    <th>Editar</th>
-                    <th>Eliminar</th>
+                    <tr align="center">
+                        <th scope="col-auto">USUARIO</th>
+                        <th scope="col-auto">CONTRASEÑA</th>
+                        <th scope="col-auto">NOMBRE</th>
+                        <th scope="col-auto">APELLIDO</th>
+                        <th scope="col-auto">EMAIL</th>
+                        <th scope="col-auto">TELEFONO</th>
+                        <th scope="col-auto">USER ADMIN</th>
+                        <th>Editar</th>
+                        <th>Eliminar</th>
+                    </tr>
                 </thead>
                 <tbody>
                     
                     {% for cli in mensaje%}
-                    <tr class="fila">
-                        <td>{{cli.CLI_User}}</td>
+                    <tr>
+                        <td scope="row">{{cli.CLI_User}}</td>
                         <td>{{cli.CLI_Password}}</td>
                         <td>{{cli.CLI_Names}}</td>
                         <td>{{cli.CLI_LastNames}}</td>
                         <td>{{cli.CLI_Email}}</td>
                         <td>{{cli.CLI_CellPhone}}</td>
                         <td>{{cli.CLI_AD_User_id}}</td>
-                        <td><a href="{% url 'Formulario2' cli.CLI_User %}"><button type="button" class="btn rounded-pill btn-outline-warning">Editar</button></a></td>
-                        <td><button type="button" class="btn rounded-pill btn-outline-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Eliminar</button></a></td>
+                        <td align="center"><a href="{% url 'Formulario2' cli.CLI_User %}"><button type="button" class="btn rounded-pill btn-outline-warning">Editar</button></a></td>
+                        <td align="center"><button type="button" class="btn rounded-pill btn-outline-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Eliminar</button></a></td>
                     </tr>
-
+    
                             <!-- Modal  hace referencia a una ventana emergente para dar la opción de confirmar-->
                         <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered">
