--- a/Supermercado/templates/menuAdmin.html
+++ b/Supermercado/templates/menuAdmin.html
@@ -61,7 +61,7 @@
                 <div class="col-4 d-grid gap-2 d-md-flex align-items-center justify-content-md-end m-0 p-0">
                     <div class="card border border-success" style="width: 20rem;">
                         <img src="{% static 'img/ingresos.png' %}" class="rounded" alt="...">
-                        <a href="#" class="btn btn-outline-success">INGRESOS</a>
+                        <a href="../ListaIngresos/" class="btn btn-outline-success">INGRESOS</a>
                     </div>
                 </div>
                 
